--- a/.github/workflows/macos-homebrew.yml
+++ b/.github/workflows/macos-homebrew.yml
@@ -92,7 +92,7 @@ jobs:
           
       - name: compile
         run: |          
-          qmake CONFIG+=release CONFIG+=no_macos_universal CONFIG+=zim_support CONFIG+=use_xapian CONFIG+=no_ffmpeg_player CONFIG+=no_tts_support
+          qmake CONFIG+=release CONFIG+=no_macos_universal CONFIG+=zim_support CONFIG+=chinese_conversion_support CONFIG+=use_xapian CONFIG+=no_ffmpeg_player CONFIG+=no_tts_support QMAKE_APPLE_DEVICE_ARCHS="arm64"
           make -j8
           
       - name: package
