--- a/.github/workflows/macos-homebrew.yml
+++ b/.github/workflows/macos-homebrew.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-13-xlarge
     strategy:
       matrix:
         os: [macos-12,macos-13]
